Changes for 1.8.1

 - [ZBX-1665] fixed hosts view in graphs configuration screen (Aly)
 - [ZBX-1673] fixed removing hosts from hosts group, when user with permission only on host group updates it (Vedmak)
 - [ZBX-1639] fixed processing of logrt[] check (Sasha)
 - [ZBX-1671] make more strings translatable. Thanks to alixen (Richlv)
 - [ZBX-1669] make more strings translatable. Patch by dotneft (Richlv)
 - [ZBX-1627] fixed errors in monitoring->overview (Vedmak)
 - [ZBX-1603] fixed button title when editing maintenance period (Vedmak)
 - [ZBX-1638] added host name to link indicator (Aly)
 - [ZBX-1658] removed "Zabbix Status" from dashboard for non super admins (Aly)
 - [ZBX-1646] improved permissions check in Dashboard (Aly)
 - [ZBX-1626] added ldap authentication to API (Aly)
 - [ZBX-1624] fixed template linkage popup, when all templates are selected by default (Vedmak)
 - [ZBX-1604] extended maintenance period info messages (Aly)
 - [ZBX-1647] removed respection of host availabilities on maps (Aly)
 - [ZBX-1495] fixed map level label location (Aly)
 - [ZBX-1629] added coloring of items in trigger configuration screen (Aly)
 - [ZBX-979] host mass update templates now only link new teplates (Vedmak)
 - [ZBX-1642] fixed possibility of editing read only host items (Vedmak)
 - [ZBX-1242] fixed adding macro in triggers editing form (Aly)
 - [ZBX-1589] fixed no permission error when try to edit host form from search screen (Vedmak)
 - [ZBX-1561] fixed errors when view event info as admin user (Vedmak)
 - [ZBX-954] fixed item property reference when adding log item with type other than "log" (Richlv)
 - [ZBX-1493] fixed disabled host icon view (Aly)
 - [ZBX-1546] fixed processing link triggers on map (Aly)
 - [ZBX-1476] fixed host links in map (Aly)
 - [ZBX-1605] fixed map with host element under maintenance (Aly)
 - [ZBX-1507] fixed userid added instead of ip for some audit actions (Vedmak)
 - [ZBX-1563] fixed error when view history for log type item (Vedmak)